--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -18,7 +18,7 @@
     height: 20px;
     margin: auto;
     margin-left: 50px;
-    color: #d3d5d9;
+    color: #b5b7bb;
     font-size: 17px;
     transition: 500ms;
     cursor: pointer;
