--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -4,6 +4,8 @@
   margin-top: 70px;
   font-family: "Karla", sans-serif;
   font-weight: 400;
+  font-size: 20px;
+  text-align: justify;
   /* border: solid 1px black; */
 }
 
@@ -45,4 +47,34 @@
 
 body {
   padding: 20px;
+}
+
+.keyword-input {
+    height: 30px;
+    font-size: 15px;
+    border: none;
+    border-bottom: 2px solid rgb(88, 88, 88);
+    outline: none;
+    width: 300px;
+}
+
+.send-btn{
+    border: none;
+    width: 100px;
+    margin: auto;
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: rgb(110, 188, 219);
+    color: white;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: 300ms;
+}
+
+.send-btn:hover {
+    background-color: rgb(77, 181, 223);
+    transition: 300ms;
 }
