--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -28,3 +28,23 @@
     color: #585858;
     transition: 500ms;
 }
+
+@media only screen and (max-width: 680px) {
+  .navbar{
+    flex-direction: column;
+    align-items: center;
+  }
+  .navbar > img {
+    margin: auto;
+    margin-bottom: 20px;
+    height: 40px;
+  }
+.navbar__links{
+  justify-content: center;
+}
+  .navbar__links > span {
+    font-size: 15px;
+    margin: auto;
+    margin: 0 5px;
+  }
+}
