--- a/src/components/Dropbox.css
+++ b/src/components/Dropbox.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     margin: auto;
-    width: 800px;
+    width: 80vw;
     height: 200px;
     border: 4px dashed #4aa1f3;
     transition: 500ms;
