--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,3 +1,8 @@
+.form {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
 .output {
   margin: auto;
   padding: 0 50px;
@@ -11,16 +16,14 @@
 
 .custom-file-input {
   color: transparent;
-  /* margin: auto; */
-  position: relative;
-  left: 50px;
-
+  width: 250px;
 }
 .custom-file-input::-webkit-file-upload-button {
   visibility: hidden;
 }
 .custom-file-input::before {
   content: "Or select some files";
+  margin-left: 56px;
   color: black;
   display: inline-block;
   background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
