--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -14,6 +14,14 @@ align-items: center;
   /* border: solid 1px black; */
 }
 
+h4 {
+  font-family: "Karla", sans-serif;
+  font-weight: 400;
+  margin-top: 50px;
+  color: rgb(134, 133, 133);
+  text-align: center;
+}
+
 .custom-file-input {
   color: transparent;
   width: 250px;
